@@ -1,4 +1,5 @@
 1.1.0
+   - bug [10689] "Fornuftig håndtering af exceptions skal implementeres i RhinoWrapper"
    - bug [10495] "Ændinger i IPLuggable"
    - bug [10075] "Ændringer i jobs.xml formatet"
    - bug [10073] "DatadockThread skal ikke længere skelne mellem plugin typer"
